--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -159,10 +159,10 @@ $master-head-bg-image = "//placehold.it/1920x1080" // "https://wallpaperaccess.c
   position relative
 .mh-100
   max-height 350px
-  border 1px dashed red
+  //border 1px dashed red
 .h-100
   height 100%
-  border 1px dashed blue
+  //border 1px dashed blue
 
 .main-title
   font-weight bold
@@ -289,7 +289,7 @@ a
 
 // -------- box-items
 .box
-  border 3px dashed #44c
+  //border 3px dashed #44c
   height 100% // makes it same height
   width 100%
   overflow hidden
@@ -304,7 +304,7 @@ a
   &__header
   &__body
     overflow hidden
-    border 3px solid red
+    //border 3px solid red
     width 100%
     height 100%
     position relative
@@ -402,11 +402,11 @@ a
         
 
 #assets
-  border 1px solid red
+  //border 1px solid red
   .b1
-    border 1px solid green
+    //border 1px solid green
     .b2
-      border 1px dashed blue
+      //border 1px dashed blue
 // -------- skewZoom-items
 .skewZoom-items
   display flex
