Adding different column settings and card
Adding different type of columns and cards

--- a/src/portfolio/portfolio.pug
+++ b/src/portfolio/portfolio.pug
@@ -59,6 +59,168 @@ block body
 							h3.news-item__caption--title Your work items title
 							p.news-item__caption--text Lorem ipsum more about this Jan 12, 2021
 		
+		section.three-column
+			.container
+				.row
+					.col-lg-12
+						h2 Three Column
+				.row.mb-4
+					.col-lg-4.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-lg-4.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-lg-4.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+								a.btn.btn-primary(href='#') Go somewhere
+
+		section.four-column-with-equal-height
+			.container
+				.row
+					.col-lg-12
+						h2 Four Column with equal height		
+				.row.mb-4
+					.col-xl-3.col-lg-6.col-md-6.col-sm-12.card-deck
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> here we type some more text
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-xl-3.col-lg-6.col-md-6.col-sm-12.card-deck
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-xl-3.col-lg-6.col-md-6.col-sm-12.card-deck
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-xl-3.col-lg-6.col-md-6.col-sm-12.card-deck
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> asodjfoasjdofjs <br /> jeorwijerowejr
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+
+		section.four-column-with-equal-height
+			.container
+				.row
+					.col-lg-12
+						h2 Four Column		
+				.row.mb-4
+					.col-xl-3.col-lg-6.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> here we type some more text
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-xl-3.col-lg-6.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-xl-3.col-lg-6.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-xl-3.col-lg-6.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> asodjfoasjdofjs <br /> jeorwijerowejr
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+
+		section.three-column-with-fluid-img-overlays
+			.container-fluid
+				.row
+					.col-lg-12
+						h2 Three Column , with fluid and img overlay
+				.row.mb-4
+					.col-lg-4.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img(src='//placehold.it/330x330' alt='...')
+							.card-body.card-img-overlay.card-img-dark-overlay
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-lg-4.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img(src='//placehold.it/330x330' alt='...')
+							.card-body.card-img-overlay.card-img-dark-overlay.card-content-center
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.<br /> this is using <strong>.card-content-center</strong> for center
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-lg-4.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img(src='//placehold.it/330x330' alt='...')
+							.card-body.card-img-overlay.card-img-dark-overlay.card-content-bottom
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> and this one is using <strong>.card-content-bottom</strong> to make it to the bottom
+								a.btn.btn-primary(href='#') Go somewhere
+
 		//-
 			// Section
 			section#projects
@@ -316,7 +478,7 @@ block body
 						a(href='#!') Terms of Use
 
 		#portfolioModal1.portfolio-modal.modal.fade(tabindex='-1' role='dialog' aria-hidden='true')
-			.modal-dialog.modal-dialog-centered
+			.modal-dialog.modal-dialog-centered.modal-xs
 				.modal-content
 					//.close-modal(data-dismiss='modal')
 					//	i.fa.fa-2.circle
