--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -25,7 +25,9 @@ $project-items-bg-color = #222
 $headings-font-family = "Open Sans","Helvetica Neue",Helvetica,Arial,"sans-serif"
 $master-head-bg-image = "//placehold.it/1920x1080" // "https://wallpaperaccess.com/full/403137.jpg"
 $portfolio-modal-bg-color = #141417 //  #152631
-
+$card-bg-color = #27272d // #152631
+$card-title-color = white
+$card-img-bg-overlay-color = rgba(0,0,0,.7)
 // ---- Extra 
 .no-gutters
   margin-right 0
@@ -331,6 +333,47 @@ a
   
 // -------- card-items
 
+.card-deck
+  margin-left 0
+  margin-right 0
+  padding-left 0
+  padding-right 0
+  
+
+
+.card
+  background-color $card-bg-color
+  .card-img-overlay.card-img-dark-overlay
+    z-index 2
+    &:after
+      position absolute
+      content ''
+      top 0
+      bottom 0
+      left 0
+      right 0
+      background $card-img-bg-overlay-color
+      z-index: -1
+    &.card-content-bottom
+      display flex
+      flex-direction:  column
+      justify-content flex-end
+    &.card-content-center
+      display flex
+      flex-direction column
+      justify-content center
+  .card-title
+    color $card-title-color
+    font-weight bold
+  .card-category
+    font-size 9pt
+    text-transform uppercase
+    padding-bottom 5px
+  @media screen and (max-width: 767px)
+    // border 1px solid red
+    width 100% !important
+
+    
 // -------- portfolio-items
 
 // -------- news-items
