adding more columntypes

--- a/src/portfolio/portfolio.pug
+++ b/src/portfolio/portfolio.pug
@@ -140,7 +140,7 @@ block body
 							.card-footer
 								a.btn.btn-primary(href='#') Go somewhere
 
-		section.four-column-with-equal-height
+		section.four-column
 			.container
 				.row
 					.col-lg-12
@@ -221,6 +221,84 @@ block body
 									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> and this one is using <strong>.card-content-bottom</strong> to make it to the bottom
 								a.btn.btn-primary(href='#') Go somewhere
 
+		section.five-column
+			.container
+				.row
+					.col-lg-12
+						h2 Five Column		
+				.row.mb-4
+					.col-md
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> here we type some more text
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-md
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-md
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-md
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> asodjfoasjdofjs <br /> jeorwijerowejr
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-md
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content. <br /> asodjfoasjdofjs <br /> jeorwijerowejr
+							.card-footer
+								a.btn.btn-primary(href='#') Go somewhere
+
+		section.2-by-2-column-full-width
+			.container-fluid.p-0
+				.row
+					.col-lg-12
+						h2 2 by 2 column with full width			
+			.container-fluid.p-0
+				.row.no-gutters.two-by-two-col-fw-bg-color-1
+					.col-lg-6.order-lg-2.section-2x2-col-fw-img(style="background-image: url('//placehold.it/900x601');")
+					.col-lg-6.order-lg-1.my-auto.section-2x2-col-fw-text
+						h2 Lorem Ipsum Title
+						p.mb-0 When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a p
+				.row.no-gutters.two-by-two-col-fw-bg-color-1
+					.col-lg-6.section-2x2-col-fw-img(style="background-image: url('//placehold.it/900x601');")
+					.col-lg-6.my-auto.my-auto.section-2x2-col-fw-text
+						h2 Lorem Ipsum Title
+						p.mb-0 When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a p
+					
+		
+		//- section.full-width-column
+		
+		
 		//-
 			// Section
 			section#projects
