Fixing the 2 by 2 column centering background image

--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -285,6 +285,7 @@ a
 .section-2x2-col-fw-img
   min-height 30rem
   background-size cover
+  background-position center center
 
 .section-2x2-col-fw-text
   padding 7rem !important 
