Change to 5.0.0-beta1
Added bootstrap 5.0.0-beta1 and change webpack files to include sass/scss

--- a/src/portfolio/portfolio.pug
+++ b/src/portfolio/portfolio.pug
@@ -7,7 +7,7 @@ block body
 	//- +insertSpace(60)
 
 	// Navigation
-	nav#mainNav.navbar.navbar-expand-lg.text-uppercase.fixed-top
+	nav#mainNav.navbar.navbar-expand-lg.text-uppercase.fixed-top(data-target="#mainNav")
 		.container
 			a.navbar-brand.js-scroll-trigger(href='#page-top') Your Website
 			.navbar-toggler.navbar-toggler-right.font-weight-bold.hamburger-icon-color.rounded(type='button', data-toggle='collapse', data-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
