--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -4,6 +4,8 @@
 
 //@import '../mixins/mixin.styl'
 
+
+
 $basic-fonts = "Open Sans","Helvetica Neue",Helvetica,Arial,"sans-serif"
 $basic-line-height = 1.8em
 $bg-primary-color = #2980b9
@@ -30,6 +32,18 @@ $card-title-color = white
 $card-text-color =  #ccc
 $card-img-bg-overlay-color = rgba(0,0,0,.7)
 $two-by-two-col-fw-bg-color-1 = #27272d
+
+// ---- Changing bootstrap theme
+
+.card, .btn, .form-control
+  border-radius 5px
+
+#navbar1 .navbar-nav .nav-link {
+  color: silver;
+}
+
+//.btn-primary { background-color: $basic-link-color; }
+
 // ---- Extra 
 .no-gutters
   margin-right 0
@@ -348,11 +362,15 @@ a
   
 // -------- card-items
 
+/*
+// Only used for bootstrap@4.5.3
 .card-deck
   margin-left 0
   margin-right 0
   padding-left 0
   padding-right 0
+
+*/
   
 .card
   background-color $card-bg-color
