--- a/src/portfolio/portfolio.scss
+++ b/src/portfolio/portfolio.scss
@@ -6,11 +6,12 @@
 
 $custom-primary: #13aff0; // #eb0000;
 $custom-secondary: #ffdd00;
+$custom-dark: #252627;
 
 $theme-colors: (
     primary:    $custom-primary,
     secondary: $custom-secondary,
-    dark: $custom-secondary
+    dark: $custom-dark
 );
 
 @import "bootstrap";
