Fixing webpack build

--- a/src/portfolio/portfolio.scss
+++ b/src/portfolio/portfolio.scss
@@ -6,7 +6,7 @@
 
 $custom-primary: #13aff0; // #eb0000;
 $custom-secondary: #ffdd00;
-$custom-dark: #252627;
+$custom-dark: #ffdd00; // #252627;
 
 $theme-colors: (
     primary:    $custom-primary,
